package org.skelir.game.model;

/**
 * Iron ressource
 * @author julien
 */
public class Iron extends Ressource{

    public Iron(){
        super("Iron", 0);
    }

    public Iron(int quantity){
        super("Iron", quantity);
    }
}
