package org.skelir.game.model;

/**
 * Wood ressource
 * @author julien
 */
public class Wood extends Ressource{

    public Wood(){
        super("Wood", 0);
    }

    public Wood(int quantity){
        super("Wood", quantity);
    }
}
