@startuml
'https://plantuml.com/class-diagram

package Controller{
    class PlayerController <<singleton>>{
        + levelUp()
        + buyExtractor()
        + levelUpExtractor()
        + collectExtractor()
        + getExtractorList()
    }

}

package registry {
    class ExtractorsRegistry <<singleton>>{
         + getExtractorsPrototype() : List<ExtractorPrototype>
         + getExtractorsById() : ExtractorPrototype
         + addExtractorPrototype(extractor : ExtractorPrototype)
     }
}

package model {



    ExtractorsRegistry o-- "0..n \n - extractorsPrototype" ExtractorPrototype
    Extractor .left.> Storage
    PlayerController .right.> ExtractorsRegistry

    class ExtractorPrototype {
        - name : String
        - efficiency : int
    }
    class Extractor {
        - lastCollect : Time
        + collect() : int
    }
    PlayerController *-- Extractor
    ExtractorPrototype -- "1 \n - type"Resource
    Extractor ---- "1 \n - extractorPrototype" ExtractorPrototype

    PlayerController *--- "1 \n - level" PlayerLevel
    PlayerController o-- "1 \n - storage" Storage
    abstract class Resource{
        - name : String
        - quantity : int
        + hasQuantity() : boolean
    }

    class Storage {
        + subRessources(or, wood, iron)
        + hasRessources(or, wood, iron) : boolean
    }
    Storage -- "1 \n - or" Or
    Storage -- "1 \n - wood" Wood
    Storage -- "1 \n - iron" Iron

    class Or extends Resource {
    }

    class Wood extends Resource {
    }


    class Iron extends Resource {
    }

    class PlayerLevel {
        - orCost : int
        - woodCost : int
        - ironCost : int
        - nextLevel : PlayerLevel
        + setCost(or, wood, iron)
        + levelUp(storage : Storage)
    }
}


package view {
    class ViewInterface {
     + errorResponse(error : String
     + validResponse(informations : List<String>)
     + update(int choice) : ViewInterface
     + render(
    }
}

ViewInterface .right.> PlayerController
@enduml